# PushshiftDumps

./: config.yaml  pyproject.toml  subreddits.txt
scripts/: combine_folder_multiprocess.py  count_words_single_file.py  filter_file.py  find_overlapping_users.py  iterate_folder.py  single_file.py  to_csv.py
